# sap-warehouse-copilot

./: .gitignore  README.md  app.py  index.html  pyproject.toml  requirements.txt  style.css
sap_warehouse_copilot/: __init__.py  main.py  nvidia_brain.py  robot_behaviors.py  sap_mock.py
sap_warehouse_copilot/static/: index.html  main.js  style.css
